[gd_scene load_steps=77 format=3 uid="uid://b03k5wi2xfo07"]

[ext_resource type="Script" uid="uid://dd22iv0i55amq" path="res://Enemies/Dual Wielder/dual_wielder.gd" id="1_7emcw"]
[ext_resource type="Texture2D" uid="uid://sk7r7unsrbi1" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Knight/Knight/Knight-Attack01.png" id="1_gajn7"]
[ext_resource type="Texture2D" uid="uid://d37t5ak0y17gb" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Knight/Knight/Knight-Attack02.png" id="2_7emcw"]
[ext_resource type="Texture2D" uid="uid://433mndw5phbg" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Knight/Knight/Knight-Attack03.png" id="3_fgmy7"]
[ext_resource type="Texture2D" uid="uid://bdwak3spscnnv" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Knight/Knight/Knight-Block.png" id="5_3ycc8"]
[ext_resource type="Texture2D" uid="uid://eyb5k1bx3cxw" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Knight/Knight/Knight-Death.png" id="6_5eixq"]
[ext_resource type="Texture2D" uid="uid://wgu2f0xa3a4y" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Knight/Knight/Knight-Hurt.png" id="7_g6dcg"]
[ext_resource type="Texture2D" uid="uid://b5f3mxb55d6wd" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Knight/Knight/Knight-Idle.png" id="8_1ppoi"]
[ext_resource type="Texture2D" uid="uid://g374n5dqupan" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Knight/Knight/Knight-Walk.png" id="9_srwd6"]
[ext_resource type="Script" uid="uid://cm3yesdavn8r8" path="res://NotResolvedYet/parry_tag_area.gd" id="10_5eixq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2g0v3"]
size = Vector2(26, 30.2979)

[sub_resource type="AtlasTexture" id="AtlasTexture_saga3"]
atlas = ExtResource("1_gajn7")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ita6g"]
atlas = ExtResource("1_gajn7")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ycc8"]
atlas = ExtResource("1_gajn7")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5eixq"]
atlas = ExtResource("1_gajn7")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6dcg"]
atlas = ExtResource("1_gajn7")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ppoi"]
atlas = ExtResource("1_gajn7")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_srwd6"]
atlas = ExtResource("1_gajn7")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h65ck"]
atlas = ExtResource("2_7emcw")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wfbf"]
atlas = ExtResource("2_7emcw")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dhx1"]
atlas = ExtResource("2_7emcw")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlvjy"]
atlas = ExtResource("2_7emcw")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn6lw"]
atlas = ExtResource("2_7emcw")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_af80g"]
atlas = ExtResource("2_7emcw")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_upp8j"]
atlas = ExtResource("2_7emcw")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvnjl"]
atlas = ExtResource("2_7emcw")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r478i"]
atlas = ExtResource("2_7emcw")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wxxr"]
atlas = ExtResource("2_7emcw")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b16u"]
atlas = ExtResource("3_fgmy7")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_e58fq"]
atlas = ExtResource("3_fgmy7")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm5hk"]
atlas = ExtResource("3_fgmy7")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_irt0j"]
atlas = ExtResource("3_fgmy7")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kru11"]
atlas = ExtResource("3_fgmy7")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0210"]
atlas = ExtResource("3_fgmy7")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4gy4"]
atlas = ExtResource("3_fgmy7")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_voq6u"]
atlas = ExtResource("3_fgmy7")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbg6g"]
atlas = ExtResource("3_fgmy7")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rilag"]
atlas = ExtResource("3_fgmy7")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vwfn"]
atlas = ExtResource("3_fgmy7")
region = Rect2(1000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_chtme"]
atlas = ExtResource("5_3ycc8")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d777p"]
atlas = ExtResource("5_3ycc8")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqhiu"]
atlas = ExtResource("5_3ycc8")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3u5dt"]
atlas = ExtResource("5_3ycc8")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5f50"]
atlas = ExtResource("6_5eixq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmrgg"]
atlas = ExtResource("6_5eixq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5vjy"]
atlas = ExtResource("6_5eixq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nstlp"]
atlas = ExtResource("6_5eixq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3gfo"]
atlas = ExtResource("7_g6dcg")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lh58"]
atlas = ExtResource("7_g6dcg")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cnjy"]
atlas = ExtResource("7_g6dcg")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8np8j"]
atlas = ExtResource("7_g6dcg")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8thih"]
atlas = ExtResource("8_1ppoi")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3h41"]
atlas = ExtResource("8_1ppoi")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wf10"]
atlas = ExtResource("8_1ppoi")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgfvk"]
atlas = ExtResource("8_1ppoi")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqa43"]
atlas = ExtResource("8_1ppoi")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_345j6"]
atlas = ExtResource("8_1ppoi")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_33d8f"]
atlas = ExtResource("7_g6dcg")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_arjji"]
atlas = ExtResource("7_g6dcg")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sghf0"]
atlas = ExtResource("7_g6dcg")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqgr0"]
atlas = ExtResource("7_g6dcg")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_etae2"]
atlas = ExtResource("9_srwd6")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn5tk"]
atlas = ExtResource("9_srwd6")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkik1"]
atlas = ExtResource("9_srwd6")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlf0y"]
atlas = ExtResource("9_srwd6")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpexu"]
atlas = ExtResource("9_srwd6")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkmrf"]
atlas = ExtResource("9_srwd6")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3bwf"]
atlas = ExtResource("9_srwd6")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_18gff"]
atlas = ExtResource("9_srwd6")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_chtme"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_saga3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ita6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ycc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5eixq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6dcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ppoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srwd6")
}],
"loop": true,
"name": &"Attack1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h65ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wfbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dhx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlvjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn6lw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_af80g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upp8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvnjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r478i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wxxr")
}],
"loop": true,
"name": &"Attack2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b16u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e58fq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm5hk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irt0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kru11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0210")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4gy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_voq6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbg6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rilag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vwfn")
}],
"loop": true,
"name": &"Attack3",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_chtme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d777p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqhiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3u5dt")
}],
"loop": true,
"name": &"Block",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5f50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmrgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5vjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nstlp")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3gfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lh58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cnjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8np8j")
}],
"loop": true,
"name": &"DeathBlow",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8thih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3h41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wf10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgfvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqa43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_345j6")
}],
"loop": true,
"name": &"Idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_33d8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arjji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sghf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqgr0")
}],
"loop": true,
"name": &"Staggered",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_etae2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn5tk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkik1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlf0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpexu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkmrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3bwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18gff")
}],
"loop": true,
"name": &"Walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d777p"]
size = Vector2(25.75, 32.375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vqhiu"]
size = Vector2(20, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_3u5dt"]
radius = 20.025

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s5f50"]
size = Vector2(272, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5eixq"]
bg_color = Color(0.938881, 0.879774, 0.965493, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g6dcg"]
bg_color = Color(0.875827, 0, 0.305009, 1)

[node name="DualWielder" type="CharacterBody2D"]
scale = Vector2(4.28, 3.76)
collision_mask = 2
script = ExtResource("1_7emcw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.85106)
shape = SubResource("RectangleShape2D_2g0v3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3.8147e-06, 0.999996)
scale = Vector2(1.55, 1.71)
sprite_frames = SubResource("SpriteFrames_chtme")
animation = &"Walk"

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -0.8125)
shape = SubResource("RectangleShape2D_d777p")

[node name="AttackArea" type="Area2D" parent="." groups=["enemies"]]
position = Vector2(23, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_vqhiu")

[node name="ParryTagArea" type="Area2D" parent="." groups=["parryable"]]
position = Vector2(23, -1)
script = ExtResource("10_5eixq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParryTagArea"]
shape = SubResource("CircleShape2D_3u5dt")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("RectangleShape2D_s5f50")

[node name="PostureBar" type="ProgressBar" parent="."]
offset_left = -19.6262
offset_top = -23.4043
offset_right = 20.3738
offset_bottom = -19.4043
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0.0745098, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_5eixq")
theme_override_styles/fill = SubResource("StyleBoxFlat_g6dcg")
show_percentage = false
